objects/Rate_Product__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Child_ren1__c</fullName>
        <label>Employee + Child(ren)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_ren2__c</fullName>
        <label>Employee + Child(ren)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_ren3__c</fullName>
        <label>Employee + Child(ren)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_One_Dependent1__c</fullName>
        <label>Employee + One Dependent</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_One_Dependent2__c</fullName>
        <label>Employee + One Dependent</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_One_Dependent3__c</fullName>
        <label>Employee + One Dependent</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only1__c</fullName>
        <label>Employee Only</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only2__c</fullName>
        <label>Employee Only</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only3__c</fullName>
        <label>Employee Only</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse1__c</fullName>
        <label>Employee + Spouse</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse2__c</fullName>
        <label>Employee + Spouse</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse3__c</fullName>
        <label>Employee + Spouse</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Two_or_More_Dependents1__c</fullName>
        <label>Employee + Two or More Dependents</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Two_or_More_Dependents2__c</fullName>
        <label>Employee + Two or More Dependents</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Two_or_More_Dependents3__c</fullName>
        <label>Employee + Two or More Dependents</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family1__c</fullName>
        <label>Family</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family2__c</fullName>
        <label>Family</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family3__c</fullName>
        <label>Family</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other1__c</fullName>
        <label>Other</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other2__c</fullName>
        <label>Other</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other3__c</fullName>
        <label>Other</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Rate Products</relationshipLabel>
        <relationshipName>Rate_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate Product</label>
    <nameField>
        <label>Rate Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>